# bendy-adhesive

./: README.md  pyproject.toml
src/bendy_adhesive/: __init__.py
